Add scripted plugin