@@ -19,6 +19,16 @@ lazy val publishSettings = bintrayPublishSettings ++ Seq(
 
 commonSettings ++ publishSettings
 
+
 versionWithGit
 
 git.baseVersion := "0.0"
+
+
+ScriptedPlugin.scriptedSettings
+
+scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+    Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+}
+
+scriptedBufferLog := false
